Fix issues with container element covering clickable parts of the map.

--- a/client/styles/common/_map.scss
+++ b/client/styles/common/_map.scss
@@ -41,6 +41,7 @@
   right: 30px;
   margin: 3px;
   z-index: 1000;
+  pointer-events: none;
 }
 
 .leaflet-popup-content-wrapper {
